@@ -1,4 +1,10 @@
 2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
+	Disable the preview overlay before inserting the item from the
+	`kill-ring', then reenable once the item has been inserted, moving
+	the preview as appropriate, this ensures that when inserting
+	multiple items the preview continues to be useful.
+
+2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
 	Adjust mechanism used to restore buffer and window before
 	inserting items from the `kill-ring', this should resolve issues
 	when there are multiple frames or windows open onto the same
